# lie-algebra-smoothness

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
experiments/: hard_direction.py  run_all.py
src/lie_smoothness/: __init__.py  algebras.py  exponential.py  smoothness.py
tests/: test_algebras.py
